interpreter/examples/good/less_simple/function_assignment3.dl
// should print 2
{
    function f(x) return 1,
    function g(fun f) return f(0),
    function h(fun f) return 2,
    int z.

    g = h;
    z = g(f);
    print z
}
