interpreter/examples/bad/type/bad_function_assignment2.dl
{
    function f(x) return 1,
    function g(fun x) return 2.
    f = g
}
